--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/PowerPackControlBar.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/PowerPackControlBar.mxml
@@ -13,6 +13,7 @@
 			import net.vdombox.powerpack.lib.player.managers.ContextManager;
 			import net.vdombox.powerpack.lib.player.template.Template;
 			import net.vdombox.powerpack.lib.player.template.TemplateProject;
+			import net.vdombox.powerpack.managers.BuilderContextManager;
 			import net.vdombox.powerpack.menu.MenuGeneralEvent;
 			import net.vdombox.powerpack.menu.MenuManager;
 			import net.vdombox.powerpack.panel.Graphs;
@@ -41,10 +42,7 @@
 			
 			private function get currentTemplate() : BuilderTemplate
 			{
-				if ( !ContextManager.templates || ContextManager.templates.length == 0 )
-					return null;
-				
-				return ContextManager.templates.getItemAt( 0 ) as BuilderTemplate;
+				return BuilderContextManager.currentTemplate;
 			}
 			
 			protected function menuItem_clickHandler(event:MouseEvent, itemType : String):void
@@ -121,7 +119,7 @@
 	<mx:Label text="Projects:" />
 	
 	<mx:ComboBox id="appsComboBox"
-				 width="200"
+				 width="200" height="20"
 				 dataProvider="{ContextManager.templates.getItemAt( 0 ).projects}" 
 				 labelField="name"
 				 selectedIndex="{ContextManager.templates.getItemAt( 0 ).selectedProjectIndex}"
