--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
@@ -65,6 +65,7 @@
 			import net.vdombox.powerpack.lib.player.managers.ContextManager;
 			import net.vdombox.powerpack.lib.player.managers.LanguageManager;
 			import net.vdombox.powerpack.lib.player.popup.AlertPopup;
+			import net.vdombox.powerpack.managers.BuilderContextManager;
 			import net.vdombox.powerpack.managers.ProgressManager;
 			import net.vdombox.powerpack.panel.graphsClasses.AccordionChild;
 			import net.vdombox.powerpack.panel.graphsClasses.GraphsAccordionEvent;
@@ -219,10 +220,7 @@
 			
 		private function get currentTemplate() : BuilderTemplate
 		{
-			if ( !ContextManager.templates || ContextManager.templates.length == 0 )
-				return null;
-			
-			return ContextManager.templates.getItemAt( 0 ) as BuilderTemplate;
+			return BuilderContextManager.currentTemplate;
 		}
 
 
