default category/graph/state
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8048 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -388,7 +388,7 @@
 			if (currentTemplate && currentTemplate.modified)
 			{
 				AlertPopup.show(
-					"Before building you should save template. \nDo you want to save template and launch building?",
+					"You must save template before building.\nDo you want to save template and launch building now?",
 					LanguageManager.sentences['confirmation'],
 					AlertPopup.YES | AlertPopup.NO, this.nativeWindow as Sprite, alertSaveAndCloseHandler, null, AlertPopup.YES );
 			} 
