some messages text change
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8052 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -789,7 +789,7 @@
 
 		public function alertProceedRun() : void
 		{
-			AlertPopup.show( "Error(s) exist in template\nProceed with launch?", "Errors in template", AlertPopup.YES | AlertPopup.NO, null, alertProceedRunHandler, null, AlertPopup.NO );
+			AlertPopup.show( "The template contains error(s).\nDo you want to proceed launching?", "Errors in template", AlertPopup.YES | AlertPopup.NO, null, alertProceedRunHandler, null, AlertPopup.NO );
 		}
 
 		private function alertProceedRunHandler( event : CloseEvent ) : void
