--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/ProjectsSettingsDialog.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/ProjectsSettingsDialog.mxml
@@ -15,6 +15,7 @@
 	<mx:Script>
 		<![CDATA[
 			import mx.collections.ArrayCollection;
+			import mx.events.CloseEvent;
 			import mx.events.FlexEvent;
 			import mx.events.ListEvent;
 			import mx.utils.StringUtil;
@@ -24,6 +25,7 @@
 			import net.vdombox.powerpack.lib.extendedapi.utils.FileUtils;
 			import net.vdombox.powerpack.lib.player.managers.ContextManager;
 			import net.vdombox.powerpack.lib.player.managers.LanguageManager;
+			import net.vdombox.powerpack.lib.player.popup.AlertPopup;
 			import net.vdombox.powerpack.lib.player.template.Template;
 			import net.vdombox.powerpack.lib.player.template.TemplateProject;
 			import net.vdombox.powerpack.managers.BuilderContextManager;
@@ -47,7 +49,8 @@
 					_dialog.show( OK | CANCEL, closeHandler, null, OK );
 					
 					var defaultCaptions : Object = {
-						template_properties : "Properties"
+						template_properties : "Properties",
+						alert_delete_project_title : "Confirmation"
 					};
 					
 					LanguageManager.setSentences( defaultCaptions );
@@ -106,6 +109,11 @@
 			
 			protected function buttonNewProject_clickHandler(event:MouseEvent):void
 			{
+				addNewProject();
+			}
+			
+			private function addNewProject():void
+			{
 				currentTemplate.createNewProject();
 				
 				var newProjectIndex : Number = projects.length-1;
@@ -116,8 +124,32 @@
 			protected function buttonRemoveProject_clickHandler(event:MouseEvent):void
 			{
 				if (projectsList.selectedIndex < 0 || projects.length <= 1)
+				{
+					AlertPopup.show("You can not remove the last project.", "", AlertPopup.OK, _dialog);
 					return;
+				}
 				
+				var projectName : String = BuilderTemplateProject(projectsList.selectedItem).name;
+				var removeProjectConfirmationMsg : String = "Are you sure you want to remove '"+ projectName +"' project?";
+				
+				AlertPopup.show(
+					removeProjectConfirmationMsg,
+					LanguageManager.sentences['alert_delete_project_title'],
+					AlertPopup.YES | AlertPopup.NO, _dialog, deleteProjectAlertCloseHandler, null, AlertPopup.YES );
+				
+				function deleteProjectAlertCloseHandler (event : CloseEvent) : void
+				{
+					if ( event.detail == AlertPopup.YES )
+					{
+						removeCurrentProject();
+					}
+				}
+				
+				
+			}
+			
+			private function removeCurrentProject():void
+			{
 				removeProjectPropertiesAt (projectsList.selectedIndex);
 				
 				currentTemplate.deleteProject ( projectsList.selectedItem as BuilderTemplateProject );
