--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/toolBoxComponents/SearchTextInputSkin.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/toolBoxComponents/SearchTextInputSkin.mxml
@@ -139,8 +139,10 @@
     </fx:Script>
     
     <s:states>
-        <s:State name="normal"/>
-        <s:State name="disabled"/>
+		<s:State name="normal"/>
+		<s:State name="disabled" stateGroups="disabledStates"/>
+		<s:State name="normalWithPrompt"/>
+		<s:State name="disabledWithPrompt" stateGroups="disabledStates"/>
     </s:states>
 
     <!-- fill -->
